--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,15 @@
-.h1 {
-	font-family: 'Notable';
+h1 {
+	font-family: 'Notable',sans-serif;
+	font-size: 48px;
+}
+h2 {
 	font-size: 36px;
+
+}
+p {
+	font-size: 24px;
+}
+body {
+	height: 968px;
+	background-image: linear-gradient(180deg, white, black);
 }
